--- a/views/auth/register.handlebars
+++ b/views/auth/register.handlebars
@@ -15,7 +15,7 @@
     </div>
     <div class="form-control">
         <label for="confirmpassword">Confirmação de Senha:</label>
-        <input type="password" name="password" placeholder="Confirme sua senha" required>
+        <input type="password" name="confirmpassword" placeholder="Confirme sua senha" required>
     </div>
     <input type="submit" value="cadastrar">
     <p>Já tem conta? <a href="/login">Clique aqui</a></p>
