adicionando login e dashboard

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -97,7 +97,7 @@
 }
 
 form input[type='submit'],
-btn {
+.btn {
     background-color: transparent;
     color: #f6982d;
     border: 2px solid #f6982d;
@@ -112,10 +112,34 @@ btn {
 }
 
 form input[type='submit']:hover,
-btn:hover {
+.btn:hover {
     background-color: #f6982d;
     color: #fff;
 }
+
+/* CREATE / EDIT FORM*/
+
+.tought-form-container a{
+    color: #f6982d;
+}
+
+.tought-form-container a:hover{
+    color: #fff;
+}
+
+.tought-form-container h1{
+    margin: 1em 0;
+    color: #fff;
+    border-left: 4px solid #f6982d;
+    padding: 0.3em;
+}
+
+.tought-form-container form{
+ max-width: 30%;  
+ margin-top: 1.5em;
+}
+
+
 
 /*FOOTER*/
 
