--- a/views/auth/register.handlebars
+++ b/views/auth/register.handlebars
@@ -7,7 +7,7 @@
     </div>
     <div class="form-control">
         <label for="email">Email:</label>
-        <input type="text" name="email" placeholder="Digite seu email" required>
+        <input type="email" name="email" placeholder="Digite seu email" required>
     </div>
     <div class="form-control">
         <label for="password">Senha:</label>
